--- a/ua.html
+++ b/ua.html
@@ -11,6 +11,7 @@
         </div>
         <script>
             document.getElementById('container').textContent = navigator.userAgent;
+            document.getElementById('pointerEvents').textContent = window.PointerEvent;
             document.getElementById('visualViewport').textContent = window.visualViewport;
         </script>
     </body>
