--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </header>
 
 <body>
-    <a href="./ua.html">User Agent</a>
-    <a href="./touch.html">Touch Event</a>
+    <div><a href="./ua.html">User Agent</a></div>
+    <div><a href="./touch.html">Touch Event</a></div>
 </body>
 
 </html>
