--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
     <div><a href="./ua.html">User Agent</a></div>
     <div><a href="./touch.html">Touch Event</a></div>
+    <div><a href="./monaco-editor.html">Monaco Editor</a></div>
 </body>
 
 </html>
