--- a/monaco-editor.html
+++ b/monaco-editor.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
     <script>var require = { paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs' } };</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/loader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/editor/editor.main.nls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/editor/editor.main.js"></script>
-</header>
+</head>
 
 <body>
     <div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
