--- a/touch.html
+++ b/touch.html
@@ -1,11 +1,11 @@
 <html>
-<header>
+<head>
     <style>
         body {
             touch-action: none;
         }
     </style>
-</header>
+</head>
 
 <body>
     <div>
