--- a/monaco-editor.html
+++ b/monaco-editor.html
@@ -5,6 +5,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/loader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/editor/editor.main.nls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.0/min/vs/editor/editor.main.js"></script>
+    <style>
+        body {
+            touch-action: none;
+        }
+    </style>
 </head>
 
 <body>
