--- a/monaco-editor.html
+++ b/monaco-editor.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div><span>Touch on body disabled</span></div>
     <div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
     <script>
         require(['vs/editor/editor.main'], function () {
