--- a/ua.html
+++ b/ua.html
@@ -9,10 +9,14 @@
         <div>
             <span>Visual Viewport: </span><span id="visualViewport"></span>
         </div>
+        <div>
+            <span>Max Touch Points: </span><span id="maxtouchpoints"></span>
+        </div>
         <script>
             document.getElementById('container').textContent = navigator.userAgent;
             document.getElementById('pointerEvents').textContent = window.PointerEvent;
             document.getElementById('visualViewport').textContent = window.visualViewport;
+            document.getElementById('maxtouchpoints').textContent = navigator.maxTouchPoints;
         </script>
     </body>
 </html>
