--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <body>
     <div><a href="./ua.html">User Agent</a></div>
+    <div><a href="./ua-touch-disabled.html">User Agent with touch disabled</a></div>
     <div><a href="./touch.html">Touch Event</a></div>
     <div><a href="./monaco-editor.html">Monaco Editor</a></div>
 </body>
