--- a/inset.html
+++ b/inset.html
@@ -5,7 +5,7 @@
         #container {
             position: absolute;
             top: 0;
-            bottom: 0;
+            bottom: env(safe-area-inset-bottom, 0);
             background-color: gray;
         }
     </style>
