--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <div><a href="./ua-touch-disabled.html">User Agent with touch disabled</a></div>
     <div><a href="./touch.html">Touch Event</a></div>
     <div><a href="./monaco-editor.html">Monaco Editor</a></div>
+    <div><a href="./monaco-editor-safe-area.html">Monaco Editor in safe area</a></div>
+    <div><a href="./inset.html">Inset</a></div>
 </body>
 
 </html>
