--- a/inset.html
+++ b/inset.html
@@ -7,6 +7,8 @@
             top: 0;
             bottom: env(safe-area-inset-bottom, 0);
             background-color: gray;
+            border-bottom: 2px solid red;
+            box-sizing: border-box;
         }
     </style>
 </head>
