--- a/monaco-editor-safe-area.html
+++ b/monaco-editor-safe-area.html
@@ -15,6 +15,8 @@
             top: 0;
             bottom: env(safe-area-inset-bottom, 0);
             background-color: gray;
+            border-bottom: 2px solid red;
+            box-sizing: border-box;
         }
     </style>
 </head>
