disable touch action on workbench container

--- a/monaco-editor-safe-area.html
+++ b/monaco-editor-safe-area.html
@@ -11,6 +11,7 @@
             touch-action: none;
         }
         #workbench-container {
+            touch-action: none;
             position: absolute;
             top: 0;
             bottom: env(safe-area-inset-bottom, 0);
