--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div><a href="./monaco-editor.html">Monaco Editor</a></div>
     <div><a href="./monaco-editor-safe-area.html">Monaco Editor in safe area</a></div>
     <div><a href="./inset.html">Inset</a></div>
+    <div><a href="./safari-blur.html">Safari Blur</a></div>
 </body>
 
 </html>
