--- a/pointer.html
+++ b/pointer.html
@@ -5,6 +5,7 @@
         #container {
             height: 300px;
             width: 300px;
+            background-color: gainsboro;
         }
     </style>
 </head>
