--- a/pointer.html
+++ b/pointer.html
@@ -17,6 +17,7 @@
 
     </div>
     <script>
+        print('has touch event', !!window.TouchEvent);
         const print = (text) => {
                 const val = document.createElement('div');
                 val.innerText = text;
