Update touch event

--- a/pointer.html
+++ b/pointer.html
@@ -2,6 +2,9 @@
 
 <head>
     <style>
+        body {
+            touch-action: none;
+        }
         #container {
             height: 300px;
             width: 300px;
