--- a/pointer.html
+++ b/pointer.html
@@ -37,6 +37,15 @@
         container.addEventListener('pointermove', (e) => {
             print('pointermove' + e.clientX + ' ' + e.clientY);
         })
+        container.addEventListener('mousedown', (e) => {
+            print('mousedown ' + e.clientX + ' ' + e.clientY);
+        })
+        container.addEventListener('mouseup', (e) => {
+            print('mouseup' + e.clientX + ' ' + e.clientY);
+        })
+        container.addEventListener('mousemove', (e) => {
+            print('mousemove' + e.clientX + ' ' + e.clientY);
+        })
     </script>
 
 </body>
