--- a/pointer.html
+++ b/pointer.html
@@ -46,6 +46,9 @@
         container.addEventListener('mousemove', (e) => {
             print('mousemove' + e.clientX + ' ' + e.clientY);
         })
+        container.addEventListener('dblclick', (e) => {
+            print('dblclick' + e.clientX + ' ' + e.clientY);
+        })
     </script>
 
 </body>
