--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div><a href="./monaco-editor-safe-area.html">Monaco Editor in safe area</a></div>
     <div><a href="./inset.html">Inset</a></div>
     <div><a href="./safari-blur.html">Safari Blur</a></div>
+    <div><a href="./containingbox.html">Containing Box</a></div>
 </body>
 
 </html>
