--- a/touchevents.html
+++ b/touchevents.html
@@ -61,6 +61,9 @@
         container.addEventListener('touchcancel', (e) => {
             print('touchcancel' + e.clientX + ' ' + e.clientY);
         })
+        container.addEventListener('click', (e) => {
+            print('click' + e.clientX + ' ' + e.clientY);
+        })
 
 
 
