allow touch only on container

--- a/touchevents.html
+++ b/touchevents.html
@@ -2,8 +2,12 @@
 
 <head>
     <style>
+        body {
+            touch-action: none;
+        }
 
         #container {
+            touch-action: initial;
             height: 100px;
             width: 100px;
             background-color: gainsboro;
