--- a/click.html
+++ b/click.html
@@ -37,10 +37,8 @@
         const container = document.getElementById('container');
 
         container.addEventListener('click', (e) => {
-            print('click' + e.clientX + ' ' + e.clientY);
+            print('click ' + e.detail);
         })
-
-
 
     </script>
 
