--- a/click.html
+++ b/click.html
@@ -24,7 +24,7 @@
     <div id="container">
     </div>
     <div id="output">
-
+        <div></div>
     </div>
     <script>
         var lastTime = 0;
