--- a/touchevents.html
+++ b/touchevents.html
@@ -71,7 +71,7 @@
             print('touchcancel' + e.clientX + ' ' + e.clientY);
         })
         container.addEventListener('click', (e) => {
-            print('click' + e.clientX + ' ' + e.clientY);
+            print('click' + e.clientX + ' ' + e.clientY)
         })
 
 
