--- a/inset.html
+++ b/inset.html
@@ -9,6 +9,7 @@
             background-color: gray;
             border-bottom: 2px solid red;
             box-sizing: border-box;
+            z-index: -1;
         }
     </style>
 </head>
@@ -30,7 +31,7 @@
     <script>
         document.getElementById('container').textContent = navigator.userAgent;
         document.getElementById('pointerEvents').textContent = window.PointerEvent;
-        document.getElementById('visualViewport').textContent = window.visualViewport;
+        document.getElementById('visualViewport').textContent = 'visualViewport.width: ' + window.visualViewport.width + ' visualViewport.height: ' + window.visualViewport.height + ' window.outerHeight: ' + window.outerHeight;
         document.getElementById('maxtouchpoints').textContent = navigator.maxTouchPoints;
 
         var a = document.createElement('div');
